# AiRecipeSearch

./: .dockerignore  Dockerfile  README.md  docker-compose.yml
backend/: .gitignore  Cargo.toml
backend/migrations/: 20260301184612_user_cooking_profile.sql
backend/src/: config.rs  error.rs  job_store.rs  main.rs  routes.rs
backend/src/db/: mod.rs  user_cooking_profile.rs  users.rs
backend/src/handlers/: auth.rs  cooking_profile.rs  mod.rs  recipes.rs
backend/src/middleware/: auth.rs  logging.rs
backend/src/models/: barcode_import.rs  mod.rs  recipe.rs  user_cooking_profile.rs
backend/src/services/: auth.rs  barcode_import_orchestrator.rs  groq.rs  jina.rs  mod.rs  recipe_orchestrator.rs  serp.rs
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/api/: auth.ts  client.ts  recipes.ts  userCookingProfile.ts
frontend/src/assets/: main.css
frontend/src/components/: NavBar.vue  RateLimitBanner.vue  SearchCostBadge.vue
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts  ingredients.ts  recipes.ts
frontend/src/types/: rateLimit.ts
frontend/src/views/: GlobalPreferencesView.vue  IngredientsView.vue  KitchenToolsView.vue  LoginView.vue  SearchView.vue  SetPasswordView.vue
