[package]
name = "AiRecipeSearch"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.8.6",features = ["runtime-tokio","postgres", "chrono"] }
tokio = { version = "1.49.0",features = ["full"] }
actix-web = "4.13.0"
actix-files = "0.6.10"
tracing-subscriber = { version = "0.3.22",features = ["env-filter"] }
tracing = "0.1.44"
actix-cors = "0.7.1"
derive_more = "2.1.1"
serde_json = "1.0.149"
reqwest = { version = "0.13.2", features = ["json", "query","gzip", "deflate"] }
jsonwebtoken = { version = "10.3.0",features = ["rust_crypto"] }
validator = { version = "0.20.0",features = ["derive"] }
bcrypt = "0.19.0"
uuid = { version = "1.21.0", features = ["v4","serde"] }
serde = { version = "1.0.228", features = ["derive"] }
futures-util = "0.3.32"
csv = "1.4.0"
actix-multipart = "0.7.2"
tokio-util = "0.7.18"
dotenvy = "0.15.7"
urlencoding = "2.1.3"
futures = "0.3.32"
rand = "0.9.2"
hex = "0.4.3"
chrono = { version = "0.4.44",features = ["serde"] }
regex = "1.12.3"
tiktoken-rs = "0.9.1"
